<resources>
    <string name="appName">ProTasks</string>
    <string name="add_email">Introduzca su e-mail/nombre de Usuario</string>
    <string name="add_password">Introduzca su contraseña</string>
    <string name="init_session">Iniciar Sesión</string>
    <string name="create_account">¿No tienes cuenta? Crea una</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="username">Nombre de Usuario</string>
    <string name="email">E-mail</string>
    <string name="Password">Contraseña</string>
    <string name="Password_repeat">Repite la Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="imageitem">imageItem</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="login_checkText">Mantenme logueado</string>
    <string name="title_activity_m2">m2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="elements_add_board">
        <item>Elige un elemento</item>
        <item>Elige una imagen</item>
        <item>Elige un color como imagen</item>
    </string-array>
    <string name="communication_error">Error obteniendo datos. Por favor, inténtelo más tarde.</string>
    <string name="no_elements">Ningún elemento seleccionado</string>
    <string name="same_cycle_lead">No puedes seleccionar mismo estado de Inicio y fin para el Cycle Time</string>

</resources>
